# codeyang

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .prettierignore  AGENTS.md  BRIDGE_GUIDE.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_REPORT.md  CODE_STATISTICS.md  COMPLETE_FIX_REPORT.md  CONNECT_TO_CODEYANG.md  DEPLOYMENT_COMPLETE.md  Dockerfile  ERROR_HANDLING_ENHANCEMENT.md  EXECUTE_TOOLS_DEMO.md  FINAL_DEMO_REPORT.md  FINAL_SCORE_REPORT.md  FINAL_SUMMARY.md  FIXES_COMPLETED.md  FIX_REPORT.md  GLOBAL_INSTALL.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_PLAN.md  IMPROVEMENT_REPORT.md  LICENSE  LOCAL_DEPLOYMENT_GUIDE.md  NPM_PUBLISH_GUIDE.md  OPTIMIZATION_SUMMARY.md  P1_TASKS_REPORT.md  PERFORMANCE_OPTIMIZATION.md  PERFORMANCE_QUICKREF.md  PHASE1_COMPLETION_REPORT.md  PHASE1_FINAL_REPORT.md  PHASE1_PERFECT_COMPLETION.md  PHASE2_DAY1_REPORT.md  PHASE2_PLAN.md  PHASE2_STAGE1_COMPLETE.md  (+56 more)
.claude/: plan.md  settings.json
.github/: CI-CD.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.learnings/: ERRORS.md  FEATURE_REQUESTS.md  LEARNINGS.md
codeyangx/: index.html  main.js  mcp.cjs  package-lock.json  package.json  preload.js  renderer.js  security.js  tools.cjs
docs/: AGENTS.md  ALL_TASKS_COMPLETE.md  ANTHROPIC_API_INTEGRATION.md  BRIDGE_GUIDE.md  BRIDGE_INTEGRATION_SUMMARY.md  (+56 more)
spacey/: .gitignore  BUILD.md  CMakeLists.txt  LICENSE  README.md  spacey-demo.js
spacey/include/spacey/: Agent.h  LLMClient.h  ToolRegistry.h
spacey/src/: main.cpp
spacey/src/agent/: Agent.cpp  LLMClient.cpp
spacey/src/tools/: FileTool.cpp  ToolRegistry.cpp
(+414 files in other folders)
